Updated config and started to rework the front page.

--- a/_app/index.html
+++ b/_app/index.html
@@ -9,12 +9,17 @@ permalink: /
   <!-- Post title -->
   <header>
     <h1 class=amsf-title>
-      Sébastien Rannou
+      mxs
     </h1>
-
-    <small>a.k.a. <b>mxs</b>&#x30FB;ver. <b>0.0.17</b>&#x30FB;view it on <a href="https://github.com/sparanoid/almace-scaffolding">GitHub</a></small>
+    <small>
+      <b><a href="http://github.com/aimxhaisse">github</a></b>・
+      <b><a href="http://twitter.com/aimxhaisse">twitter</a></b>・
+      <b><a href="https://www.flickr.com/photos/102646976@N05/">flickr</a></b>・
+      <b><a href="https://soundcloud.com/aimxhaisse/">soundcloud</a></b>・
+      <b><a href="mailto:mxs@sbrk.org">mail</a></b>・
+      <b><a href="#">rss</a></b>
+    </small>
   </header>
-
   {% for post in site.categories.note %}
     {% include page-item.html %}
   {% endfor %}
