--- a/_app/page-about.html
+++ b/_app/page-about.html
@@ -2,12 +2,16 @@
 layout: page
 title: About
 permalink: /about/
-desc: Introduction
+desc: Hi.
 ---
 
-blabla, ici intro anglais + français
+<p class=page-intro>
+  This is <a href="http://mxs.sbrk.org/">my</a> homepage, a mixture of
+  things that somehow interested me at some point in my life, sometimes
+  expressed in English, sometimes in French.
+</p>
 
-<h2>~</h2>
+<h1 class=huge-tild>~</h1>
 
 <p>
   Ceci est un caractère ASCII, il a pris forme dans un coin de mon
@@ -36,9 +40,6 @@ blabla, ici intro anglais + français
 </p>
 
 <p>
-  Toute cette complexité et cette énergie dépensée sur cette page
-  devraient m'obliger à donner une brève idée de qui je suis, de mes
-  passions, de mon but dans la vie, bref, d'écrire une page de
-  présentation digne de ce nom. Malheuresement, elle a été écrit un jour
-  où j'ai préféré te faire perdre 5 minutes.
+  Toute cette complexité et cette énergie dépensée sur cette page, pour
+  finalement pas grand chose.
 </p>
