Added icons via a css font.

--- a/_app/page-about.html
+++ b/_app/page-about.html
@@ -1,17 +1,17 @@
 ---
 layout: page
-title: About
+title: about this place
 permalink: /about/
-desc: Hi.
+desc: <b>a.k.a</b> what the hell am I doing here
 ---
 
-<p class=page-intro>
+<p class="page-intro">
   This is <a href="http://mxs.sbrk.org/">my</a> homepage, a mixture of
-  things that somehow interested me at some point in my life, sometimes
-  expressed in English, sometimes in French.
+  articulated words about things that somehow interested me at some
+  point in my life.
 </p>
 
-<h1 class=huge-tild>~</h1>
+<h1 class="huge-tild">~</h1>
 
 <p>
   Ceci est un caractère ASCII, il a pris forme dans un coin de mon
@@ -40,6 +40,5 @@ desc: Hi.
 </p>
 
 <p>
-  Toute cette complexité et cette énergie dépensée sur cette page, pour
-  finalement pas grand chose.
+  To be continued...
 </p>
