--- a/_app/index.html
+++ b/_app/index.html
@@ -9,15 +9,14 @@ permalink: /
   <!-- Post title -->
   <header>
     <h1 class=amsf-title>
-      mxs
+      <a href="http://mxs.sbrk.org/">mxs</a>
     </h1>
     <small>
-      <b><a href="http://github.com/aimxhaisse">github</a></b>・
-      <b><a href="http://twitter.com/aimxhaisse">twitter</a></b>・
-      <b><a href="https://www.flickr.com/photos/102646976@N05/">flickr</a></b>・
-      <b><a href="https://soundcloud.com/aimxhaisse/">soundcloud</a></b>・
-      <b><a href="mailto:mxs@sbrk.org">mail</a></b>・
-      <b><a href="#">rss</a></b>
+      <b><a href="http://github.com/aimxhaisse" class="icon">U</a></b>・
+      <b><a href="http://twitter.com/aimxhaisse" class="icon">^</a></b>・
+      <b><a href="https://www.flickr.com/photos/102646976@N05/" class="icon">V</a></b>・
+      <b><a href="mailto:mxs@sbrk.org" class="icon">[</a></b>・
+      <b><a href="#" class="icon">Æ</a></b>
     </small>
   </header>
   {% for post in site.categories.note %}
