Reworked index' and about pages.

--- a/_app/index.html
+++ b/_app/index.html
@@ -12,11 +12,14 @@ permalink: /
       <a href="http://mxs.sbrk.org/">mxs</a>
     </h1>
     <small>
-      <b><a href="http://github.com/aimxhaisse" class="icon">U</a></b>・
-      <b><a href="http://twitter.com/aimxhaisse" class="icon">^</a></b>・
-      <b><a href="https://www.flickr.com/photos/102646976@N05/" class="icon">V</a></b>・
-      <b><a href="mailto:mxs@sbrk.org" class="icon">[</a></b>・
-      <b><a href="#" class="icon">Æ</a></b>
+      <b>a.k.a</b> Sébastien Rannou
+    </small>
+    <small>
+      <b><a href="http://github.com/aimxhaisse" class="icon">U</a></b>
+      <b><a href="http://twitter.com/aimxhaisse" class="icon">^</a></b>
+      <b><a href="https://www.flickr.com/photos/102646976@N05/" class="icon">V</a></b>
+      <b><a href="mailto:mxs@sbrk.org" class="icon">[</a></b>
+      <b><a href="{{ site.feed | prepend: site.base }}/" class="icon">Æ</a></b>
     </small>
   </header>
   {% for post in site.categories.note %}
