--- a/_app/page-about.html
+++ b/_app/page-about.html
@@ -2,13 +2,14 @@
 layout: page
 title: about this place
 permalink: /about/
-desc: <b>a.k.a</b> what the hell am I doing here
+desc: <b>or</b> what the hell am I doing here
 ---
 
 <p class="page-intro">
   This is <a href="http://mxs.sbrk.org/">my</a> homepage, a mixture of
   articulated words about things that somehow interested me at some
-  point in my life.
+  point in my life: photography, philosophy, coding, music, writing,
+  or hanging around in strange places with a fishing rod.
 </p>
 
 <h1 class="huge-tild">~</h1>
