--- a/_app/index.html
+++ b/_app/index.html
@@ -22,7 +22,7 @@ permalink: /
       <b><a href="{{ site.feed | prepend: site.base }}/" class="icon">Æ</a></b>
     </small>
   </header>
-  {% for post in site.categories.note %}
+  {% for post in site.categories.news %}
     {% include page-item.html %}
   {% endfor %}
 </article>
