Added first day in norway.

--- a/_app/_posts/2013-09-20-norway.html
+++ b/_app/_posts/2013-09-20-norway.html
@@ -14,7 +14,7 @@ desc: <b>ou</b> comment survivre
 </p>
 
 <article>
-  {% for post in site.categories.norway %}
+  {% for post in site.categories.norway reversed %}
     {% include page-item.html %}
   {% endfor %}
 </article>
