Updated page descriptions.

--- a/_app/page-about.html
+++ b/_app/page-about.html
@@ -2,7 +2,7 @@
 layout: page
 title: about this place
 permalink: /about/
-desc: <b>or</b> what the hell am I doing here
+desc: <b>welcome</b> to the desert of the real
 ---
 
 <p class="page-intro">
