--- a/_app/page-code.html
+++ b/_app/page-code.html
@@ -2,7 +2,7 @@
 layout: page
 title: code
 permalink: /code/
-desc: <b>or </b> how to follow the white rabbit
+desc: there is <b>no</b> spoon
 ---
 
 <article>
