--- a/_app/page-photos.html
+++ b/_app/page-photos.html
@@ -2,16 +2,8 @@
 layout: page
 title: Photography
 permalink: /photography/
-desc: <b>let's</b> catch some light
+desc: there is some <b>fiction</b> in your truth
 ---
-
-<p class="note page-intro">
-  Your first 10 000 photographs are your worst.
-</p>
-
-<small class="page-intro">
-  <a href="http://en.wikipedia.org/wiki/Henri_Cartier-Bresson">Henry Cartier-Bresson</a>
-</small>
 
 <article>
   {% for post in site.categories.photo %}
