--- a/_app/page-writings.html
+++ b/_app/page-writings.html
@@ -2,7 +2,7 @@
 layout: page
 title: writings
 permalink: /writings/
-desc: <b>words</b>, lots of words
+desc: there is some <b>truth</b> in your fiction
 ---
 
 <article>
