--- a/_app/index.html
+++ b/_app/index.html
@@ -1,25 +1,22 @@
 ---
 layout: default
-title: Hello Monde
+title: mxs
 permalink: /
 ---
 
 <article>
-
   <!-- Post title -->
   <header>
     <h1 class=amsf-title>
       <a href="http://mxs.sbrk.org/">mxs</a>
-    </h1>
-    <small>
-      <b>a.k.a</b> Sébastien Rannou
-    </small>
-    <small>
       <b><a href="http://github.com/aimxhaisse" class="icon">U</a></b>
       <b><a href="http://twitter.com/aimxhaisse" class="icon">^</a></b>
       <b><a href="https://www.flickr.com/photos/102646976@N05/" class="icon">V</a></b>
       <b><a href="mailto:mxs@sbrk.org" class="icon">[</a></b>
       <b><a href="{{ site.feed | prepend: site.base }}/" class="icon">Æ</a></b>
+    </h1>
+    <small>
+      <b>a.k.a</b> Sébastien Rannou
     </small>
   </header>
   {% for post in site.categories.news %}
