Added link between articles for norway's trip.

--- a/_app/_posts/writings/2013-09-20-norway.html
+++ b/_app/_posts/writings/2013-09-20-norway.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: l'instant norvégien
-categories: [news, writings]
+categories: writings
 permalink: /norway/
 desc: <b>ou</b> comment survivre
 ---
