Reworked about page.

--- a/_app/page-about.html
+++ b/_app/page-about.html
@@ -41,5 +41,8 @@ desc: <b>welcome</b> to the desert of the real
 </p>
 
 <p>
-  To be continued...
+  Tout ça devrait un peu m'obliger à décrire qui je suis, mes
+  passions, mes envies, mon but dans la vie... C'est un peu le sens
+  d'une page de présentation. Mais en fait non, j'ai préféré te faire
+  perdre quelques minutes.
 </p>
